--- a/config/2DPASS-nuscenes.yaml
+++ b/config/2DPASS-nuscenes.yaml
@@ -16,10 +16,10 @@ model_params:
     - 4
     - 8
     - 16
-    - 16
-    - 16
+    # - 16
+    # - 16
 
-  hiden_size: 256
+  hiden_size: 64
   num_classes: 17
   backbone_2d: resnet34
   pretrained2d: False
@@ -56,7 +56,7 @@ dataset_params:
     - -4
 
   train_data_loader:
-    data_path: "./dataset/nuscenes/"
+    data_path: "/data/xzy/elon/nuscenes/"
     batch_size: 8
     shuffle: True
     num_workers: 8
@@ -67,7 +67,7 @@ dataset_params:
     dropout_aug: True
 
   val_data_loader:
-    data_path: "./dataset/nuscenes/"
+    data_path: "/data/xzy/elon/nuscenes/"
     shuffle: False
     num_workers: 8
 
